redis-cli-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cli-nosidecar-svc
spec:
  type: ClusterIP
  selector:
    app: redis-cli-nosidecar
  ports:
  - name: tcp
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: redis-cli-nosidecar
  annotations:
    sidecar.istio.io/inject: "false"
  name: redis-cli-nosidecar
  namespace: default
spec:
  containers:
  - args:
    - sleep
    - "300000"
    image: redis
    imagePullPolicy: IfNotPresent
    name: redis-cli-test
    resources:
      requests:
        cpu: 100m
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cli-sidecar-svc
spec:
  type: ClusterIP
  selector:
    app: redis-cli-sidecar
  ports:
  - name: tcp
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: redis-cli-sidecar
  name: redis-cli-sidecar
  namespace: default
spec:
  containers:
  - args:
    - sleep
    - "300000"
    image: redis
    imagePullPolicy: IfNotPresent
    name: redis-cli-test
    resources:
      requests:
        cpu: 100m
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: redis-cart
spec:
  template:
    metadata:
      labels:
        app: redis-cart
    spec:
      containers:
      - name: redis
        image: redis:alpine
        ports:
        - containerPort: 6379
        readinessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        livenessProbe:
          periodSeconds: 5
          tcpSocket:
            port: 6379
        volumeMounts:
        - mountPath: /data
          name: redis-data
        resources:
          limits:
            memory: 256Mi
            cpu: 125m
          requests:
            cpu: 70m
            memory: 200Mi
      volumes:
      - name: redis-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cart
spec:
  type: ClusterIP
  selector:
    app: redis-cart
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
